--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  margin: 0 auto;
+  padding: 0 auto;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+#nav-bar{
+  display: flex;
+  font-size: 1rem;
+  background-color: rgb(242, 242, 242);
+}
+
+#nav-bar .link{
+  margin-right: 1.875rem;
+  text-decoration: none;
+  font-weight: 600;
+  color: black;
+  transition: 0.6s;
+}
+
+#nav-bar .link:hover{
+  color: rgb(2, 99, 255);
+  cursor: pointer;
+}
+
+.logo{
+  color: black;
+  font-size: 1rem;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  transition: 0.6s;
+}
+
+.logo:hover{
+  color: rgb(2, 99, 255);
+  cursor: pointer;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -73,17 +115,17 @@
   }
 }
 
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+} */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
