--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,9 +13,8 @@
   background-color: rgb(213, 213, 213);
 }
 
-#nav-bar .link{
-  margin-right: 1.875rem;
-  text-decoration: none;
+.link{
+  margin-left: 1.5rem;
   font-weight: 600;
   color: black;
   transition: 0.6s;
@@ -38,6 +37,15 @@
 .logo:hover{
   color: rgb(2, 99, 255);
   cursor: pointer;
+}
+
+.composto{
+  background-color: rgb(208, 208, 208);
+  padding: 1rem;
+}
+
+.composto h2, .composto label, .composto p{
+  font-weight: 600;
 }
 
 :root {
