--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,6 +49,15 @@
   font-weight: 600;
 }
 
+.simples{
+  background-color: rgb(208, 208, 208);
+  padding: 1rem;
+}
+
+.simples h2, .simples label, .simples p{
+  font-weight: 600;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
