--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
   margin: 0 auto;
   padding: 0 auto;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
-#nav-bar{
+#nav-bar {
   display: flex;
   font-size: 1rem;
   background-color: rgb(213, 213, 213);
 }
 
-.link{
+.link {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   font-weight: 600;
@@ -21,12 +21,12 @@
   transition: 0.6s;
 }
 
-#nav-bar .link:hover{
+#nav-bar .link:hover {
   color: rgb(2, 99, 255);
   cursor: pointer;
 }
 
-.logo{
+.logo {
   color: black;
   font-size: 1rem;
   font-weight: 900;
@@ -35,47 +35,84 @@
   transition: 0.6s;
 }
 
-.logo:hover{
+.logo:hover {
   color: rgb(2, 99, 255);
   cursor: pointer;
 }
 
-.composto{
-  background-color: rgb(208, 208, 208);
-  padding: 1rem;
+#inicio {
+  background: linear-gradient(270deg, rgba(62, 62, 16, 0.5), rgba(33, 61, 17, 0.5)), url("/Images/background-dinheiro.webp");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.625rem;
+  padding-left: 3rem;
+  padding-right: 6rem;
+  transition: 0.7s;
 }
 
-.composto h2, .composto label, .composto p{
+#inicio h1{
+  color: white;
+  font-size: 2rem;
+  font-weight: normal;
+  letter-spacing: 3px;
+}
+
+#inicio p{
+  color: white;
+  font-size: 1.3rem;
+  font-weight: normal;
+  letter-spacing: 3px;
+}
+
+.composto {
+  background-color: rgb(208, 208, 208);
+  padding: 5rem 0;
+}
+
+.composto h2,
+.composto label,
+.composto p {
   font-weight: 600;
 }
 
-.simples{
+.simples {
   background-color: rgb(208, 208, 208);
-  padding: 1rem;
+  padding: 3rem 0;
 }
 
-.simples h2, .simples label, .simples p{
+.simples h2,
+.simples label,
+.simples p {
   font-weight: 600;
 }
 
-.sac{
+.sac {
   background-color: rgb(208, 208, 208);
-  padding: 1rem;
+  padding: 3rem 0;
 }
 
-.sac h2, .sac label, .sac h4, .sac ul, .sac p{
+.sac h2,
+.sac label,
+.sac h4,
+.sac ul,
+.sac p {
   font-weight: 600;
 }
 
-footer{
+footer {
   background-color: rgb(193, 193, 193);
   padding: 1.3rem;
 }
 
-footer p{
+footer p {
   font-weight: 500;
   font-size: 1.1rem;
-  text-align: center;
   color: black;
 }
 
@@ -90,30 +127,24 @@ footer p{
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -128,24 +159,20 @@ footer p{
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -168,12 +195,9 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 a {
