--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,6 +116,17 @@
   padding: 5rem 0;
 }
 
+.sac .aviso{
+  background-color: rgba(214, 0, 0, 0.35);
+  border: 1px solid red;
+  color: black
+}
+
+.sac .aviso p{
+  font-weight: 400;
+  font-size: 1rem;
+}
+
 .sac h2,
 .sac label,
 .sac h4,
