Refatorando para a pasta App Router

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 * {
   margin: 0 auto;
   padding: 0 auto;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
 
 #nav-bar {
@@ -91,7 +88,8 @@
 
 .composto {
   background-color: rgb(208, 208, 208);
-  padding: 15rem 0;
+  min-height: 100vh;
+  padding: 2.5rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,7 +103,8 @@
 
 .simples {
   background-color: rgb(208, 208, 208);
-  padding: 15rem 0;
+  min-height: 100vh;
+  padding: 2.5rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -119,7 +118,8 @@
 
 .sac {
   background-color: rgb(208, 208, 208);
-  padding: 15rem 0;
+  min-height: 100vh;
+  padding: 2.5rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -165,8 +165,11 @@
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgb(193, 193, 193);
-  padding: 2.5rem;
+  padding: 1rem 0.5rem 0;
 }
 
 footer p {
